test/SemanticAnalysis/Switch/SwitchTemplateType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <typename T>
require(movable<T>)
void doSwitch(T data) {
	// CHECK: .loci:8:10: error: switch type 'notag(T)' is not an object
	switch (move data) { }
}

// CHECK: 1 error generated.
